@@ -1,3 +1,9 @@
+2022-10-30  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/preproc/preconv/preconv.cpp: Trivially refactor.  Rename
+	`default_encoding` to `fallback_encoding` for clarity.  Update
+	comments and debugging diagnostic messages accordingly.
+
 2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[grolj4]: Absorb lj4_font(5) man page into grolj4(1).
